--- a/curriculum_vitae.yaml
+++ b/curriculum_vitae.yaml
@@ -8,6 +8,8 @@ address:
     - Canada
 email: rzach@ucalgary.ca
 twitter: rrrichardzach
+mastodonhandle: rrrichardzach
+mastodoninstance: mathstodon.xyz
 www: richardzach.org
 tel: +1 (403) 220 3170
 scholar: 79lNJr4AAAAJ
